--- a/css/main.css
+++ b/css/main.css
@@ -16,5 +16,40 @@ html {
   border: 3px solid;
   border-color: #9a816d;
   padding:0 1rem 1rem 1rem;
+}
 
+h1 {
+  font-family: "dosis", sans-serif, bold;
+  margin: .5rem 0 .5rem 0;
+  font-size: 1.5rem;
+}
+
+p {
+  font-family: "Georgia", serif;
+  line-height: 1.5rem;
+  font-size: 1rem;
+}
+
+dl {
+  font size: .875rem;
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+  border-color: #9a816d;
+}
+
+dd {
+  display: inline-block;
+}
+
+dt {
+  display: inline-block;
+}
+
+.btn-wrap {
+  text-align: center;
+}
+
+.btn {
+  text-align: center;
+  
 }
