--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 html {
-	box-sizing: border-box;
-    background-color: #f0eee8;
+  box-sizing: border-box;
+  background-color: #f0eee8;
 }
 
 *, *::before, *::after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 .link-card {
@@ -15,11 +15,12 @@ html {
   border-radius: 3px;
   border: 3px solid;
   border-color: #9a816d;
-  padding:0 1rem 1rem 1rem;
+  padding: 0 1rem 1rem 1rem;
+  width: 19em;
 }
 
-h1 {
-  font-family: "dosis", sans-serif, bold;
+a h2 {
+  font-family: "Dosis", sans-serif, bold;
   margin: .5rem 0 .5rem 0;
   font-size: 1.5rem;
 }
@@ -31,25 +32,41 @@ p {
 }
 
 dl {
-  font size: .875rem;
+  font-size: .875rem;
   border-top: 2px solid;
   border-bottom: 2px solid;
   border-color: #9a816d;
-}
-
-dd {
-  display: inline-block;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  line-height: 1.35rem;
 }
 
 dt {
   display: inline-block;
+  width: 5.5em;
 }
 
-.btn-wrap {
-  text-align: center;
+dd {
+  display: inline-block;
+  width: 8em;
+  font-style: italic;
 }
 
-.btn {
+a .btn {
   text-align: center;
-  
+  background-color: #785439;
+  display: block;
+  color: #f0eee8;
+  font-family: "Dosis", sans-serif, bold;
+  border-radius: 8px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.link-card:hover {
+  background-color: #cabdb2;
+}
+
+.link-card:hover .btn {
+  background-color: #512200;
 }
